Fix icon spacing

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -98,6 +98,6 @@ footer {
 }
 
 li .icon {
-  float: left;
   margin-right: 3px;
 }
+
